Update article with new title, type, topics, and content on benefits and drawbacks of taking qualifications in English

--- a/articles/352a116f005f08.md
+++ b/articles/352a116f005f08.md
@@ -1,7 +1,38 @@
 ---
-title: "test title"
+title: "英語で資格を受ける効果"
 emoji: "🐡"
-type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
-published: false
+type: "idea" # tech: 技術記事 / idea: アイデア
+topics: ["英語", "資格", "勉強法"]
+published: true
 ---
+
+## はじめに
+いくつか技術系の資格を英語で勉強し、取得しました。本記事では、そのメリットとデメリットを解説します。英語で資格を受けることは、単なる資格取得以上の価値をもたらします。
+
+## メリット
+### 1. 英語と技術の同時学習
+- 英語の勉強と技術の勉強を同時にできるので、二つを分けて勉強するより効率が良い
+- 技術英語に強くなることで、グローバルな情報源にアクセスしやすくなる
+- 英語のドキュメントやリソースを理解できるようになる
+
+### 2. 周囲からの評価
+- 自己申告だが周囲にすごいと言ってもらえる
+
+### 3. 豊富な情報源
+- 教材がたくさんあるので、勉強がしやすい
+- Udemy等で動画教材も豊富
+- 英語の教材は最新の情報が多く、アップデートも早い
+
+## デメリット
+### 1. 時間がかかる
+- 通常よりも時間がかかり、知らない単語が多い場合はほとんど単語の勉強になる
+- 英語の理解に時間を取られ、技術の習得が遅れることがある
+
+### 2. 証明の難しさ
+- 英語で受験したというのは資格証明としては記載されないのであくまで自己満足
+
+### 3. 日本語の単語不足
+- 日本語での言い方を知らない場合が出てくる
+
+## 結論
+結果的には英語の勉強にもなり、英語で資格を受講することは非常に効果的だとおもう。
